tests/examples/py_complete/compiler_error/advanced_algorithms.py
# advanced_algorithms.py - Syntax error scenario (but this file is correct)

def complex_calculation(input_data, algorithm='default', precision=2, debug=False):
    return round(sum(input_data), precision)

def handle_edge_cases(data):
    if not data:
        return None
    return data

def main_algorithm(input_list, config=None, verbose=False):
    return [x * x for x in input_list]

if __name__ == '__main__':
    pass
